[package]
authors = ["Solend Maintainers <maintainers@solend.fi>"]
description = "Solend Program CLI"
edition = "2018"
homepage = "https://solend.fi"
license = "Apache-2.0"
name = "solend-program-cli"
repository = "https://github.com/solendprotocol/solana-program-library"
version = "0.1.0"

[dependencies]
clap = "=2.34.0"
solana-clap-utils = "~1.10.29"
solana-cli-config = "~1.10.29"
solana-client = "~1.10.29"
solana-logger = "~1.10.29"
solana-sdk = "~1.10.29"
solana-program = "~1.10.29"
solend-program = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3.0", features=["no-entrypoint"] }

[[bin]]
name = "solend-program"
path = "src/main.rs"
